change dependency of opencart patch; update opencart skin on defautl theme

--- a/admin/view/template/extension/module/d_visualize_nuxt.twig
+++ b/admin/view/template/extension/module/d_visualize_nuxt.twig
@@ -1,5 +1,18 @@
-{{ header }}{{ column_left }}
+{{ header }}
+    {{ column_left }}
 <div id="content">
     {{ app|raw }}
 </div>
+<style>
+    .v-menu__content {
+        margin-left: -235px;
+        margin-top: -60px;
+    }
+    @media screen and (max-width: 768px) {
+        .v-menu__content {
+            margin-left: 0;
+            margin-top: 0;
+        }
+    }
+</style>
 {{ footer }}
