--- a/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/_config.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/_config.scss
@@ -1,7 +1,21 @@
-$color: [object Object];
-$button: [object Object];
-$font: [object Object];
+$color-text-primary: white;
+$color-primary: #229ac8;
+$color-text-body: #666;
+$color-heading: #444;
+$color-link: #23a1d1;
+$button-radius: 5px;
+$button-font-size: 14px;
+$button-border-width: 1px;
+$button-text-transform: (  );
+$button-box-shadow: true;
+$font-size-base: 14px;
+$font-family: Open Sans;
+$font-line-height: 1.3;
+$font-headings-family: Open Sans;
+$font-headings-size-base: 14px;
+$font-headings-line-height: 1.1;
+$font-headings-letter-spacing: 1px;
+$font-headings-text-transform: (  );
 $breakpoints: ('phone': 320px,'phone-wide': 480px,'phablet': 560px,'tablet-small': 640px,'tablet': 769px,'tablet-wide': 991px,'laptop': 1199px,'desktop': 1248px,'desktop-wide': 1440px);
-$layout: [object Object];
+$layout-container-width: 980;
 $z-indexes: ('alert', 'modal','menu', 'product-thumb', 'site-header','loader','backdrop', 'page-wrapper', 'site-footer', 'mobile-menu-button', 'select-arrow','main-wrapper','modal-backdrop',);
-$settings: [object Object];
