--- a/catalog/view/theme/d_visualize/template/partial/d_product_thumb.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_product_thumb.twig
@@ -1,1 +1,1 @@
-{% include partial.d_product_thumb.component.d_product_thumb.template %}
+{% include component.d_product_thumb.template with component.d_product_thumb %}
