--- a/catalog/view/theme/d_visualize/template/component/product/category_description/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/product/category_description/default.twig
@@ -1,7 +1,9 @@
-<div class="jag-category-description">
+<div class="category-description category-description--default">
     <div class="container">
-        <div class="col-12">
-            {{ description }}
+        <div class="row">
+            <div class="col-12 col-sm-12">
+                {{ description }}
+            </div>
         </div>
     </div>
 </div>
