--- a/catalog/view/theme/d_visualize/template/component/product_category/opencart.twig
+++ b/catalog/view/theme/d_visualize/template/component/product_category/opencart.twig
@@ -2,16 +2,18 @@
 <h2 class="heading-h2 vz-product_category__heading">{{ heading_title }}</h2>
     <div class="vz-product_category__description">
         {% if thumb or description %}
-            <div class="row"> {% if thumb %}
+            <div class="row">
+                {% if thumb %}
                     <div class="col-sm-2"><img src="{{ thumb }}" alt="{{ heading_title }}" title="{{ heading_title }}" class="img-thumbnail" /></div>
                 {% endif %}
-                {% if description %}
+                {{ description_after_content }}
+                {% if description and not component.product_category.description_after_content =='true' %}
                     <div class="col-sm-10">{{ description }}</div>
                 {% endif %}</div>
             <hr>
         {% endif %}
         {% if categories %}
-            <h3>{{ text_refine }}</h3>
+            <div class="heading-h3">{{ text_refine }}</div>
             {% if categories|length <= 5 %}
                 <div class="row">
                     <div class="col-sm-3">
