fix adding new product with vd; removing;add notification handler in core.

--- a/catalog/view/theme/d_visualize/template/component/default/remove_btn/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/default/remove_btn/default.twig
@@ -1,6 +1,6 @@
 {% if not remove_link %}
     {% include component.button.template with {button:{
-        button: 'cart.remove('~ product_id~');',
+        onclick: 'cart.remove('~ product_id~');',
         style:'danger',
         text_button:'<i class="fas fa-times"></i>',
         title:button_remove ,
