fix event _ for non default themes. add bem to breamcrumb and rating on defautl theme.

--- a/catalog/view/theme/d_visualize/template/component/breadcrumb/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/breadcrumb/default.twig
@@ -3,15 +3,15 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <ul class="breadcrumb vz-breadcrumb vz-breadcrumb_default">
+                <ul class="breadcrumb vz-breadcrumb vz-breadcrumb--default">
                     {% set count = 0 %}
                     {% for breadcrumb in breadcrumbs %}
                         {% set count = count + 1 %}
 
                         {% if count == breadcrumbs|length %}
-                            <li class="vz-breadcrumb_item vz-breadcrumb_item_last">{{ breadcrumb.text }}</li>
+                            <li class="vz-breadcrumb__item vz-breadcrumb__item--last">{{ breadcrumb.text }}</li>
                         {% else %}
-                            <li class="vz-breadcrumb_item"><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a>
+                            <li class="vz-breadcrumb__item"><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a>
                             </li>
                         {% endif %}
                     {% endfor %}
