--- a/catalog/view/theme/d_visualize/template/component/d_rating/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_rating/default.twig
@@ -1,4 +1,4 @@
-<div class="vz-rating">
+<div class="vz-rating vz-rating--default">
 	<input value="{{ rating }}" name="rating" hidden
 		   class="vz-rating__input rating-loading" data-filled="fas fa-star" data-empty="far fa-star empty"
             {% if static_rating %} data-readonly{% endif %}>
