--- a/catalog/view/theme/d_visualize/stylesheet/vz-helpers/base/helper/_import.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/vz-helpers/base/helper/_import.scss
@@ -1,8 +1,8 @@
 @import "mixins";
 @import "functions";
-/*TEST*/
+// /*TEST*/
 //.test{
 //  @import "test_mixins";
 //@import "test_functions";
 //}
-/*TEST*/
+// /*TEST*/
