--- a/catalog/view/theme/d_visualize/template/account/affiliate.twig
+++ b/catalog/view/theme/d_visualize/template/account/affiliate.twig
@@ -1,152 +1,1 @@
-{#it's mean in layout template#}
-{% extends template %}
-{% block content %}
-    <h1>{{ heading_title }}</h1>
-    <form action="{{ action }}" method="post" enctype="multipart/form-data" class="form-horizontal">
-        <fieldset>
-            <legend>{{ text_my_affiliate }}</legend>
-            {% include component.form_group.template with{
-                form_group:{
-                    label_text:entry_company ,
-                    required:true,
-                    error:error_company,
-                    input:{
-                        type:'text',
-                        id:'input-company',
-                        name:'company',
-                        value:company,
-                    }
-                }
-            } %} 
-            {% include component.form_group.template with{
-                form_group:{
-                    label_text:entry_website ,
-                    input:{
-                        type:'text',
-                        id:'input-website',
-                        name:'website',
-                        value:website,
-                        placeholder:entry_website ,
-                    }
-                }
-            } %}
-        </fieldset>
-        <fieldset>
-            
-            <legend>{{ text_payment }}</legend>
-            {% include component.form_group.template with component.form_group|merge({
-            type:'text',
-            id:'input-tax',
-            name:'tax',
-            value:tax,
-            text_input:entry_tax,
-            placeholder:entry_tax,
-            }) %}
-            {% include component.form_group.template with component.form_group|merge({
-            type:'radio',
-            id:'input-payment',
-            name:'payment',
-            radio_values: [{ 'val':'cheque','name': text_cheque},{'val':'paypal','name':text_paypal},{'val':'bank','name':text_bank}],
-            radio_values_val:'val',
-            radio_values_check: payment,
-            radio_values_name: 'name',
-            text_input:entry_payment,
-            error:error_payment,
-            }) %}
-            <div class="payment" id="payment-cheque">
-                {% include component.form_group.template with component.form_group|merge({
-                type:'text',
-                id:'input-cheque',
-                name:'cheque',
-                required:true,
-                value:cheque,
-                text_input:entry_cheque ,
-                placeholder:entry_cheque ,
-                error:error_cheque
-                }) %}
-            </div>
-            <div class="payment" id="payment-paypal">
-                {% include component.form_group.template with component.form_group|merge({
-                type:'text',
-                id:'input-paypal',
-                name:'paypal',
-                required:true,
-                value:paypal,
-                text_input:entry_paypal ,
-                placeholder:entry_paypal ,
-                error:error_paypal
-                }) %}
-            </div>
-
-            <div class="payment" id="payment-bank">
-                {% include component.form_group.template with component.form_group|merge({
-                type:'text',
-                id:'input-bank-name',
-                name:'bank_name',
-                value:bank_branch_name,
-                text_input:entry_bank_name ,
-                placeholder:entry_bank_name ,
-                }) %}
-                {% include component.form_group.template with component.form_group|merge({
-                type:'text',
-                id:'input-bank-branch-number',
-                name:'bank_branch_number',
-                value:bank_branch_number,
-                text_input:entry_bank_branch_number ,
-                placeholder:entry_bank_branch_number ,
-                }) %}
-                {% include component.form_group.template with component.form_group|merge({
-                type:'text',
-                id:'input-bank-swift-code',
-                name:'bank_swift_code',
-                value:bank_swift_code,
-                text_input:entry_bank_swift_code ,
-                placeholder:entry_bank_swift_code ,
-                }) %}
-                {% include component.form_group.template with component.form_group|merge({
-                type:'text',
-                id:'input-bank-account-name',
-                name:'bank_account_name',
-                required:true,
-                value:bank_account_name,
-                text_input:entry_bank_account_name ,
-                placeholder:entry_bank_account_name ,
-                error:error_bank_account_name ,
-                }) %}
-                {% include component.form_group.template with component.form_group|merge({
-                type:'text',
-                id:'input-bank-account-number',
-                name:'bank_account_number',
-                required:true,
-                value:bank_account_number,
-                text_input:entry_bank_account_name ,
-                placeholder:entry_bank_account_number ,
-                error:error_bank_account_number ,
-                }) %}
-            </div>
-            {% for custom_field in custom_fields %}
-                {% if custom_field.location == 'affiliate' %}
-                    {% include component.d_custom_field.template with  component.d_custom_field %}
-                {% endif %}
-            {% endfor %}
-
-        </fieldset>
-        {% include component.d_button_continue.template with  component.d_button_continue %}
-    </form>
-    <script type="text/javascript"><!--
-		$(function () {
-			d_address_field.init({
-				zone_id: '{{ zone_id }}',
-				text_none: '{{ text_none }}',
-				text_select: '{{ text_select }}'
-			});
-		});
-		$('input[name=\'payment\']').on('change', function () {
-			$('.payment').hide();
-
-			$('#payment-' + this.value).show();
-		});
-
-		$('input[name=\'payment\']:checked').trigger('change');
-		//--></script>
-{% endblock %}
+{% extends 'd_visualize/template/affiliate/register.twig' %}
