--- a/catalog/view/theme/d_visualize/template/affiliate/register.twig
+++ b/catalog/view/theme/d_visualize/template/affiliate/register.twig
@@ -156,15 +156,15 @@
             {% endif %}
         {% endfor %}
   </fieldset>
-  <script type="text/javascript"><!--
+<script type="text/javascript">
 	  $('input[name=\'payment\']').on('change', function() {
 		  $('.payment').hide();
 
 		  $('#payment-' + this.value).show();
 	  });
-
 	  $('input[name=\'payment\']:checked').trigger('change');
-	  //--></script>
+</script>
 {% endblock %}
+
 {% block newslatter %}
 {% endblock %}
