--- a/catalog/view/theme/d_visualize/template/component/checkout_cart/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/checkout_cart/default.twig
@@ -1,5 +1,5 @@
-<div class="vz-checkout-cart">
-    <h1 class="vz-checkout-cart__heading heading-h1">{{ heading_title }}
+<div class="vz-checkout-cart vz-checkout-cart--default">
+    <div class="vz-checkout-cart__heading heading-h1">{{ heading_title }}
         {% if weight %}
             &nbsp;({{ weight }})
         {% endif %} </h1>
