--- a/catalog/view/theme/d_visualize/template/checkout/payment_method.twig
+++ b/catalog/view/theme/d_visualize/template/checkout/payment_method.twig
@@ -18,13 +18,17 @@
         {% endfor %}
     </div>
 {% endif %}
- {% include component.form_group.template with component.form_group|merge({
-     type:'textarea',
-     name:'comment',
-     value:comment,
-     text_input:text_comments,
-     custom:'rows="8"'
- }) %}
+{% include component.form_group.template with{
+    form_group:{
+        label_text:text_comments ,
+        input:{
+            type:'textarea',
+            name:'comment',
+            value:comment,
+            rows:"8"
+        }
+    }
+} %}
   {% include component.d_button_continue.template with component.d_button_continue|merge({
       button: true,
       id:"button-payment-method",
